[package]
name = "runtime"
description = "Empowering everyone to build asynchronous software."
version = "0.3.0-alpha.4"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rustasync/runtime"
homepage = "https://github.com/rustasync/runtime"
documentation = "https://docs.rs/runtime"
authors = ["The Rust Async Ecosystem Working Group"]
keywords = ["async", "runtime", "generic", "tokio", "romio"]
categories = ["asynchronous", "network-programming", "filesystem", "concurrency", "api-bindings"]
edition = "2018"

[features]
default = ["native"]
native = ["runtime-native"]

[dependencies]
futures-preview = "0.3.0-alpha.16"
runtime-attributes = { path = "runtime-attributes", version = "0.3.0-alpha.4" }
runtime-raw = { path = "runtime-raw", version = "0.3.0-alpha.3" }
runtime-native = { path = "runtime-native", version = "0.3.0-alpha.3", optional = true }
pin-utils = "0.1.0-alpha.4"

[dev-dependencies]
failure = "0.1.5"
futures01 = { package = "futures", version = "0.1" }
futures-preview = { version = "0.3.0-alpha.16", features = ["nightly", "async-await"] }
juliex = "0.3.0-alpha.6"
mio = "0.6.16"
rand = "0.6.5"
runtime-tokio = { path = "runtime-tokio", version = "0.3.0-alpha.3" }
tokio = "0.1.19"

[profile.bench]
codegen-units = 1
incremental = false

[workspace]
members = [
  ".",
  "runtime-attributes",
  "runtime-native",
  "runtime-raw",
  "runtime-tokio",
]
