[package]
name = "runtime-attributes"
description = "Proc Macro attributes for the Runtime crate."
version = "0.3.0-alpha.1"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rustasync/runtime"
homepage = "https://github.com/rustasync/runtime"
documentation = "https://docs.rs/runtime-attributes"
authors = ["The Rust Async Ecosystem Working Group"]
keywords = ["async", "runtime", "generic", "macro", "proc-macro"]
categories = ["asynchronous", "network-programming", "filesystem", "concurrency", "api-bindings"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15", features = ["full"] }
proc-macro2 = { version = "0.4.24", features = ["nightly"] }
quote = "0.6"

[dev-dependencies]
runtime-raw = { path = "../runtime-raw", version = "0.3.0-alpha.1" }
runtime-tokio = { path = "../runtime-tokio", version = "0.3.0-alpha.1" }
