[package]
name = "runtime-attributes"
description = "Proc Macro attributes for the Runtime crate."
version = "0.3.0-alpha.5"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rustasync/runtime"
homepage = "https://github.com/rustasync/runtime"
documentation = "https://docs.rs/runtime-attributes"
authors = ["The Rust Async Ecosystem Working Group"]
keywords = ["async", "runtime", "generic", "macro", "proc-macro"]
categories = ["asynchronous", "network-programming", "filesystem", "concurrency", "api-bindings"]
edition = "2018"

[lib]
proc-macro = true

[features]
default = ["native"]
native = []

[dependencies]
syn = { version = "0.15.33", features = ["full"] }
proc-macro2 = { version = "0.4.29", features = ["nightly"] }
quote = "0.6.12"

[dev-dependencies]
runtime-raw = { path = "../runtime-raw", version = "0.3.0-alpha.4" }
