[package]
name = "runtime-native"
description = "A cross-platform asynchronous runtime"
version = "0.3.0-alpha.6"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rustasync/runtime"
homepage = "https://github.com/rustasync/runtime"
documentation = "https://docs.rs/runtime-native"
authors = ["The Rust Async Ecosystem Working Group"]
keywords = ["async", "runtime", "generic", "romio", "juliex"]
categories = ["asynchronous", "network-programming", "filesystem", "concurrency", "api-bindings"]
edition = "2018"

[dependencies]
futures-preview = { version = "0.3.0-alpha.19", features = ["compat"] }
runtime-raw = { path = "../runtime-raw", version = "0.3.0-alpha.5" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-datagram = "3.0.0"
juliex = "0.3.0-alpha.8"
lazy_static = "1.3.0"
romio = "0.3.0-alpha.10"
futures-timer = "0.5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures01 = { package = "futures", version = "0.1" }
wasm-bindgen = "0.2.43"
wasm-bindgen-futures = "0.4.1"
