[package]
name = "runtime-raw"
description = "Traits to implement custom Runtimes."
version = "0.3.0-alpha.1"
authors = ["The Rust Async Ecosystem Working Group"]
keywords = ["async", "runtime", "generic", "trait", "backing"]
categories = ["asynchronous", "network-programming", "filesystem", "concurrency", "api-bindings"]
edition = "2018"

[dependencies]
async-datagram = "2.0.0"
futures-preview = "0.3.0-alpha.13"
lazy_static = "1.0.0"
mio = "0.6.16"
