[package]
name = "runtime-raw"
description = "Traits to implement custom Runtimes."
version = "0.3.0-alpha.2"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rustasync/runtime"
homepage = "https://github.com/rustasync/runtime"
documentation = "https://docs.rs/runtime-raw"
authors = ["The Rust Async Ecosystem Working Group"]
keywords = ["async", "runtime", "generic", "trait", "backing"]
categories = ["asynchronous", "network-programming", "filesystem", "concurrency", "api-bindings"]
edition = "2018"

[dependencies]
futures-preview = "0.3.0-alpha.15"
