[package]
name = "runtime-tokio"
description = "A Tokio-based asynchronous runtime"
version = "0.3.0-alpha.6"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rustasync/runtime"
homepage = "https://github.com/rustasync/runtime"
documentation = "https://docs.rs/runtime-tokio"
authors = ["The Rust Async Ecosystem Working Group"]
keywords = ["async", "runtime", "generic", "tokio", "std"]
categories = ["asynchronous", "network-programming", "filesystem", "concurrency", "api-bindings"]
edition = "2018"

[dependencies]
futures-preview = { version = "0.3.0-alpha.18", features = ["compat", "io-compat"] }
futures01 = { package = "futures", version = "0.1" }
lazy_static = "1.3.0"
mio = "0.6.16"
runtime-raw = { path = "../runtime-raw", version = "0.3.0-alpha.5" }
tokio = "0.1.19"
